--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
         <div id="incomp" class="tasklist">
             <div class="navbar">
                 TODO:
+                <button class=" button add">+</button>
             </div>
             <div id="tasks">
-                <div id="task1" class="task"></div>
-                <div id="task1" class="task"></div>
+                <div id="task1" class="task">
+                    <textarea id="task1inp" class="taskinp" spellcheck="false" placeholder="Enter Task"></textarea>
+                    <button class="button chkbx" id="task1btn">▢</button>
+                </div>
             </div>
         </div>
         <div id="comp" class="tasklist">
@@ -24,7 +27,10 @@
                 DONE:
             </div>
             <div id="tasks">
-                <div id="task3" class="task"></div>
+                <div id="task2" class="task">
+                    <textarea id="task1inp" class="taskinp done" spellcheck="false" placeholder="Enter Task"></textarea>
+                    <button class="button chkbx" id="task1btn">✔</button>
+                </div>
             </div>
         </div>
     </div>
