--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
         <div id="incomp" class="tasklist">
             <div class="navbar">
                 TODO:
-                <button class=" button add">+</button>
+                <button class=" button add" id="addtask">+</button>
             </div>
             <div id="tasks">
                 <div id="task1" class="task">
                     <textarea id="task1inp" class="taskinp" spellcheck="false" placeholder="Enter Task"></textarea>
                     <button class="button chkbx" id="task1btn">▢</button>
+                    <button class="button del" id="task1del">🗑️</button>
                 </div>
             </div>
         </div>
@@ -30,6 +31,7 @@
                 <div id="task2" class="task">
                     <textarea id="task1inp" class="taskinp done" spellcheck="false" placeholder="Enter Task"></textarea>
                     <button class="button chkbx" id="task1btn">✔</button>
+                    <button class="button del" id="task1del">🗑️</button>
                 </div>
             </div>
         </div>
