--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <div id="task1" class="task">
                     <textarea id="task1inp" class="taskinp" spellcheck="false" placeholder="Enter Task"></textarea>
                     <button class="button chkbx" id="task1btn">▢</button>
-                    <button class="button del" id="task1del">🗑️</button>
+                    <button class="button del" id="task1del" onclick="this.parentElement.remove()">🗑️</button>
                 </div>
             </div>
         </div>
@@ -31,7 +31,7 @@
                 <div id="task2" class="task">
                     <textarea id="task1inp" class="taskinp done" spellcheck="false" placeholder="Enter Task"></textarea>
                     <button class="button chkbx" id="task1btn">✔</button>
-                    <button class="button del" id="task1del">🗑️</button>
+                    <button class="button del" id="task1del" onclick="this.parentElement.remove()">🗑️</button>
                 </div>
             </div>
         </div>
