--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div id="tasks">
                 <div id="task1" class="task">
                     <textarea id="task1inp" class="taskinp" spellcheck="false" placeholder="Enter Task"></textarea>
-                    <button class="button chkbx" id="task1btn">▢</button>
+                    <button class="button chkbx" id="task1btn" onclick="markasdone(this)">▢</button>
                     <button class="button del" id="task1del" onclick="this.parentElement.remove()">🗑️</button>
                 </div>
             </div>
@@ -27,11 +27,11 @@
             <div class="navbar">
                 DONE:
             </div>
-            <div id="tasks">
+            <div id="comptasks">
                 <div id="task2" class="task">
-                    <textarea id="task1inp" class="taskinp done" spellcheck="false" placeholder="Enter Task"></textarea>
-                    <button class="button chkbx" id="task1btn">✔</button>
-                    <button class="button del" id="task1del" onclick="this.parentElement.remove()">🗑️</button>
+                    <textarea id="task2inp" class="taskinp done" spellcheck="false" placeholder="Enter Task"></textarea>
+                    <button class="button chkbx" id="task2btn" onclick="markasdone(this)">✔</button>
+                    <button class="button del" id="task2del" onclick="this.parentElement.remove()">🗑️</button>
                 </div>
             </div>
         </div>
