--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <script src="./main.js"></script>
     <script src="./renderer.js"></script>
+    <script src="./index.js"></script>
     <title>Wallpaper</title>
 </head>
 <body>
