--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./style.css">
     <script src="./renderer.js"></script>
     <script src="./index.js"></script>
-    <title>Wallpaper</title>
+    <title>Todo List</title>
 </head>
 <body>
     <div id="todobox">
