--- a/login/signup.html
+++ b/login/signup.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>SignUp</title>
     <link rel="stylesheet" href="./login.css">
-    <script src="./login.js"></script>
+    <script src="./signup.js"></script>
 </head>
 <body>
     <div class="box">
-        <div id="Login">Login</div>
+        <div id="Login">SignUp</div>
         <div id="email" class="field">
             Email:
             <div id="einp" class="inp">
@@ -17,15 +17,21 @@
             </div>
         </div>
         <div id="password" class="field">
-            Password:
+            New password:
             <div id="pinp" class="inp">
                 <input id="passwordinp" type="password">
             </div>
         </div>
-        <div id="submit" class="field">
-            <button id="btn" onclick="btnpress()">Sign In</button>
+        <div id="password" class="field">
+            Type password again:
+            <div id="pinpagain" class="inp">
+                <input id="passwordinpagain" type="password">
+            </div>
         </div>
-        <div id="signup"><a href="./signup.html" style="color:aqua" >Don't have an account? sign up</a></div>
+        <div id="submit" class="field">
+            <button id="btn" onclick="btnpress()">Sign Up</button>
+        </div>
+        <div id="signup"><a href="./login.html" style="color:aqua">Already have an account? sign in</a></div>
     </div>
 </body>
 </html>
